--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,30 +4,24 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --gradient-start: #030142;
+  --gradient-end: #00000C;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+          to bottom,
+          transparent,
+          rgb(var(--gradient-end))
+  )
+  rgb(var(--gradient-start));
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .bg-gradient-diagonal {
+    background-image: linear-gradient(to bottom right, var(--gradient-start), var(--gradient-end));
+    background-size: cover; /* Ensure background covers the entire element */
+    background-repeat: no-repeat; /* Prevent background from repeating */
   }
 }
