Add hobbies section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --gradient-start: #01052a;
+  --gradient-start: #040834;
   --gradient-end: #00000c;
 }
 
